--- a/views/servers.html
+++ b/views/servers.html
@@ -45,6 +45,13 @@
                 ><span>Manage Servers</span>
               </a>
               <a
+                      href="/market"
+                      class="list-group-item list-group-item-action py-2 ripple"
+              >
+                <i class="fas fa-server fa-fw me-3"></i
+                ><span>Market</span>
+              </a>
+              <a
                 href="/logout"
                 class="list-group-item list-group-item-action py-2 ripple"
               >
