fix : market albion

--- a/views/market.html
+++ b/views/market.html
@@ -342,7 +342,9 @@
         <div class="container pt-4">
             <!--Section: Main-->
             <section>
-                <div id="controls">
+                <div class="row">
+                    <div class="col-xl-3 col-sm-6 col-12 mb-4">
+                        <div id="controls">
                     <div class="controlgroup">
                         <select id="tier">
                             <option value="T8">T8</option>
@@ -401,12 +403,14 @@
                         <button id="submit">Submit</button>
                     </div>
                 </div>
-                <div id="loading" style="display: none;">
-                    <img alt="loading" src="https://i.ya-webdesign.com/images/minimalist-transparent-loading-gif-9.gif">
-                </div>
-                <div id="wrapper"></div>
-                <div id="dialog" title="Historical Data">
-                    <div id="chart_div" style="width: 750px; height: 500px;"></div>
+                        <div id="loading" style="display: none;">
+                            <img alt="loading" src="https://i.ya-webdesign.com/images/minimalist-transparent-loading-gif-9.gif">
+                        </div>
+                        <div id="wrapper"></div>
+                        <div id="dialog" title="Historical Data">
+                            <div id="chart_div" style="width: 750px; height: 500px;"></div>
+                        </div>
+                    </div>
                 </div>
             </section>
             <!-- Footer -->
