--- a/views/market.html
+++ b/views/market.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Market</title>
-    <link rel="shortcut icon" href="/logo.gif" type="image/gif" />
+    <link rel="shortcut icon" href="/logo.gif" type="image/gif"/>
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -47,7 +47,14 @@
         ];
         let items;
         let chart_data;
-        let timestamp_options = {  year: 'numeric', month: 'short', day: 'numeric', hour: '2-digit', minute: '2-digit', hour12: true };
+        let timestamp_options = {
+            year: 'numeric',
+            month: 'short',
+            day: 'numeric',
+            hour: '2-digit',
+            minute: '2-digit',
+            hour12: true
+        };
 
         // Filters
         let tier;
@@ -74,9 +81,9 @@
 
         // Build ajax call URL
         function buildURL(url, items, enchant, quality, location) {
-            let ajax_url =  url+items+enchant+'?locations='+location;
+            let ajax_url = url + items + enchant + '?locations=' + location;
             if (quality !== 0)
-                ajax_url += '&qualities='+quality;
+                ajax_url += '&qualities=' + quality;
             return encodeURI(ajax_url);
         }
 
@@ -86,7 +93,7 @@
 
             let options = {
                 title: 'Average Price History',
-                hAxis: {title: 'Time',  titleTextStyle: {color: '#333'}},
+                hAxis: {title: 'Time', titleTextStyle: {color: '#333'}},
                 vAxis: {minValue: 0}
             };
 
@@ -95,7 +102,7 @@
         }
 
         // Initialization
-        $(document).ready( function () {
+        $(document).ready(function () {
             // Set up filter input control group
             $('.controlgroup').controlgroup();
 
@@ -147,8 +154,8 @@
                     let html;
 
                     // Create container for items list
-                    html = "<div id='"+container_id+"'>";
-                    html += "<h1>"+location+"</h1>";
+                    html = "<div id='" + container_id + "'>";
+                    html += "<h1>" + location + "</h1>";
                     $.ajax({
                         url: buildURL(prices, item, enchant, quality, location),
                         success: function (data) {
@@ -160,23 +167,21 @@
                                     let sell_date = new Date(value['sell_price_min_date']);
 
                                     // Get list of items as cards
-                                    let html = "<div class='card' data-item-name='"+value["item_id"]+"' data-item-enchant='"+enchant+"' data-item-quality='"+value["quality"]+"' data-item-location='"+location+"'>";
-                                    if (value['quality'] > 0)
-                                    {
+                                    let html = "<div class='card' data-item-name='" + value["item_id"] + "' data-item-enchant='" + enchant + "' data-item-quality='" + value["quality"] + "' data-item-location='" + location + "'>";
+                                    if (value['quality'] > 0) {
                                         let price = container_id === "black-market" ? value['buy_price_min'].toLocaleString() : value['sell_price_min'].toLocaleString();
                                         let date = container_id === "black-market" ? buy_date.toLocaleTimeString('en-us', timestamp_options) : sell_date.toLocaleTimeString('en-us', timestamp_options);
 
-                                        html += "<p>Item: "+tier+enchant+" "+$('option[value='+match[1]+']').html()+"</p>";
-                                        html += "<p>Quality: "+$('option[value='+value['quality']+']').html()+"</p>";
-                                        html += "<p><b>Price: "+price.toLocaleString()+"</b></p>";
-                                        html += "<p>"+date+"</p>";
-                                    }
-                                    else
+                                        html += "<p>Item: " + tier + enchant + " " + $('option[value=' + match[1] + ']').html() + "</p>";
+                                        html += "<p>Quality: " + $('option[value=' + value['quality'] + ']').html() + "</p>";
+                                        html += "<p><b>Price: " + price.toLocaleString() + "</b></p>";
+                                        html += "<p>" + date + "</p>";
+                                    } else
                                         html += "<p>No results found.</p>";
                                     html += "</div>";
 
                                     // Append cards to their container
-                                    $(html).appendTo($("#"+container_id+""))
+                                    $(html).appendTo($("#" + container_id + ""))
                                 })
                             ).then(function () {
                                 $('#loading').hide();
@@ -211,7 +216,7 @@
                     });
 
                     // Populate chart
-                    google.charts.load('current', {'packages':['corechart']});
+                    google.charts.load('current', {'packages': ['corechart']});
                     google.charts.setOnLoadCallback(drawChart);
 
                     // Open and recenter dialog
@@ -221,47 +226,7 @@
             });
         });
     </script>
-    <style>
-        h1 {
-            background: white;
-            border-radius: 5px;
-            padding: 5px;
-            box-shadow: 0.3em 0.3em 1em rgba(0,0,0,0.3);
-        }
-        #controls {
-            display: flex;
-            justify-content: center;
-        }
-        #loading {
-            display: flex;
-            justify-content: center;
-        }
-        #wrapper {
-            display: flex;
-            justify-content: center;
-        }
-        #wrapper > div {
-            padding: 10px;
-            text-align: center;
-        }
-        .card {
-            height: 150px;
-            background: white;
-            border-radius: 5px;
-            min-width: 200px;
-            margin: 15px 0;
-            padding: 10px 0;
-            box-shadow: 0.3em 0.3em 1em rgba(0,0,0,0.3);
-            cursor: pointer;
-        }
-        .card p {
-            padding: 5px;
-            margin: 6px 0;
-        }
-        .card p:nth-child(even) {
-            background: #CCC
-        }
-    </style>
+
 </head>
 <body>
 <section class="main">
@@ -328,7 +293,7 @@
 
                 <!-- Brand -->
                 <a class="navbar-brand text-white" href="/">
-                    <img src="/logo.gif" height="40" alt="" loading="lazy" />
+                    <img src="/logo.gif" height="40" alt="" loading="lazy"/>
                     Market
                 </a>
             </div>
@@ -343,74 +308,75 @@
             <!--Section: Main-->
             <section>
                 <div class="row">
-                    <div class="col-xl-3 col-sm-6 col-12 mb-4">
-                        <div id="controls">
-                    <div class="controlgroup">
-                        <select id="tier">
-                            <option value="T8">T8</option>
-                            <option value="T7">T7</option>
-                            <option value="T6">T6</option>
-                            <option value="T5">T5</option>
-                            <option value="T4">T4</option>
-                            <option value="T3">T3</option>
-                            <option value="T2">T2</option>
-                            <option value="T1">T1</option>
-                        </select>
-                        <select id="item">
-                            <option value="All">All</option>
-                            <option value="ARMOR_CLOTH_SET1">Scholar Robe</option>
-                            <option value="ARMOR_CLOTH_SET2">Cleric Robe</option>
-                            <option value="ARMOR_CLOTH_SET3">Mage Robe</option>
-                            <option value="HEAD_CLOTH_SET1">Scholar Cowl</option>
-                            <option value="HEAD_CLOTH_SET2">Cleric Cowl</option>
-                            <option value="HEAD_CLOTH_SET3">Mage Cowl</option>
-                            <option value="SHOES_CLOTH_SET1">Scholar Sandals</option>
-                            <option value="SHOES_CLOTH_SET2">Cleric Sandals</option>
-                            <option value="SHOES_CLOTH_SET3">Mage Sandals</option>
-                            <option value="ARMOR_LEATHER_SET1">Mercenary Jacket</option>
-                            <option value="ARMOR_LEATHER_SET2">Hunter Jacket</option>
-                            <option value="ARMOR_LEATHER_SET3">Assassin Jacket</option>
-                            <option value="HEAD_LEATHER_SET1">Mercenary Hood</option>
-                            <option value="HEAD_LEATHER_SET2">Hunter Hood</option>
-                            <option value="HEAD_LEATHER_SET3">Assassin Hood</option>
-                            <option value="SHOES_LEATHER_SET1">Mercenary Shoes</option>
-                            <option value="SHOES_LEATHER_SET2">Hunter Shoes</option>
-                            <option value="SHOES_LEATHER_SET3">Assassin Shoes</option>
-                            <option value="ARMOR_PLATE_SET1">Soldier Armor</option>
-                            <option value="ARMOR_PLATE_SET2">Knight Armor</option>
-                            <option value="ARMOR_PLATE_SET3">Guardian Armor</option>
-                            <option value="HEAD_PLATE_SET1">Soldier Helmet</option>
-                            <option value="HEAD_PLATE_SET2">Knight Helmet</option>
-                            <option value="HEAD_PLATE_SET3">Guardian Helmet</option>
-                            <option value="SHOES_PLATE_SET1">Soldier Boots</option>
-                            <option value="SHOES_PLATE_SET2">Knight Boots</option>
-                            <option value="SHOES_PLATE_SET3">Guardian Boots</option>
-                        </select>
-                        <select id="enchant">
-                            <option value="">Enchantment 0</option>
-                            <option value="@1">Enchantment 1</option>
-                            <option value="@2">Enchantment 2</option>
-                            <option value="@3">Enchantment 3</option>
-                        </select>
-                        <select id="quality">
-                            <option value="0">All</option>
-                            <option value="1">Normal</option>
-                            <option value="2">Good</option>
-                            <option value="3">Outstanding</option>
-                            <option value="4">Excellent</option>
-                            <option value="5">Masterpiece</option>
-                        </select>
-                        <button id="submit">Submit</button>
-                    </div>
-                </div>
-                        <div id="loading" style="display: none;">
-                            <img alt="loading" src="https://i.ya-webdesign.com/images/minimalist-transparent-loading-gif-9.gif">
-                        </div>
-                        <div id="wrapper"></div>
-                        <div id="dialog" title="Historical Data">
-                            <div id="chart_div" style="width: 750px; height: 500px;"></div>
+
+                    <div id="controls">
+                        <div class="controlgroup">
+                            <select id="tier">
+                                <option value="T8">T8</option>
+                                <option value="T7">T7</option>
+                                <option value="T6">T6</option>
+                                <option value="T5">T5</option>
+                                <option value="T4">T4</option>
+                                <option value="T3">T3</option>
+                                <option value="T2">T2</option>
+                                <option value="T1">T1</option>
+                            </select>
+                            <select id="item">
+                                <option value="All">All</option>
+                                <option value="ARMOR_CLOTH_SET1">Scholar Robe</option>
+                                <option value="ARMOR_CLOTH_SET2">Cleric Robe</option>
+                                <option value="ARMOR_CLOTH_SET3">Mage Robe</option>
+                                <option value="HEAD_CLOTH_SET1">Scholar Cowl</option>
+                                <option value="HEAD_CLOTH_SET2">Cleric Cowl</option>
+                                <option value="HEAD_CLOTH_SET3">Mage Cowl</option>
+                                <option value="SHOES_CLOTH_SET1">Scholar Sandals</option>
+                                <option value="SHOES_CLOTH_SET2">Cleric Sandals</option>
+                                <option value="SHOES_CLOTH_SET3">Mage Sandals</option>
+                                <option value="ARMOR_LEATHER_SET1">Mercenary Jacket</option>
+                                <option value="ARMOR_LEATHER_SET2">Hunter Jacket</option>
+                                <option value="ARMOR_LEATHER_SET3">Assassin Jacket</option>
+                                <option value="HEAD_LEATHER_SET1">Mercenary Hood</option>
+                                <option value="HEAD_LEATHER_SET2">Hunter Hood</option>
+                                <option value="HEAD_LEATHER_SET3">Assassin Hood</option>
+                                <option value="SHOES_LEATHER_SET1">Mercenary Shoes</option>
+                                <option value="SHOES_LEATHER_SET2">Hunter Shoes</option>
+                                <option value="SHOES_LEATHER_SET3">Assassin Shoes</option>
+                                <option value="ARMOR_PLATE_SET1">Soldier Armor</option>
+                                <option value="ARMOR_PLATE_SET2">Knight Armor</option>
+                                <option value="ARMOR_PLATE_SET3">Guardian Armor</option>
+                                <option value="HEAD_PLATE_SET1">Soldier Helmet</option>
+                                <option value="HEAD_PLATE_SET2">Knight Helmet</option>
+                                <option value="HEAD_PLATE_SET3">Guardian Helmet</option>
+                                <option value="SHOES_PLATE_SET1">Soldier Boots</option>
+                                <option value="SHOES_PLATE_SET2">Knight Boots</option>
+                                <option value="SHOES_PLATE_SET3">Guardian Boots</option>
+                            </select>
+                            <select id="enchant">
+                                <option value="">Enchantment 0</option>
+                                <option value="@1">Enchantment 1</option>
+                                <option value="@2">Enchantment 2</option>
+                                <option value="@3">Enchantment 3</option>
+                            </select>
+                            <select id="quality">
+                                <option value="0">All</option>
+                                <option value="1">Normal</option>
+                                <option value="2">Good</option>
+                                <option value="3">Outstanding</option>
+                                <option value="4">Excellent</option>
+                                <option value="5">Masterpiece</option>
+                            </select>
+                            <button id="submit">Submit</button>
                         </div>
                     </div>
+                    <div id="loading" style="display: none;">
+                        <img alt="loading"
+                             src="https://i.ya-webdesign.com/images/minimalist-transparent-loading-gif-9.gif">
+                    </div>
+                    <div id="wrapper"></div>
+                    <div id="dialog" title="Historical Data">
+                        <div id="chart_div" style="width: 750px; height: 500px;"></div>
+                    </div>
+
                 </div>
             </section>
             <!-- Footer -->
@@ -478,6 +444,7 @@
             width: 100%;
         }
     }
+
     .sidebar .active {
         border-radius: 5px;
         box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
@@ -537,17 +504,25 @@
     ::-webkit-scrollbar-thumb:hover {
         background: #414ca1;
     }
+
+    .card {
+        height: 150px;
+        background: white;
+        border-radius: 5px;
+        min-width: 200px;
+        margin: 15px 0;
+        padding: 10px 0;
+        box-shadow: 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+        cursor: pointer;
+    }
+
+    .card p {
+        padding: 5px;
+        margin: 6px 0;
+    }
+
+    .card p:nth-child(even) {
+        background: #CCC
+    }
 </style>
-<script>
-    $(document).ready(() => {
-        var socket = io();
-        socket.emit("dashboard");
-        socket.on("dashboard", (data) => {
-            $("#commands").text(data.commands);
-            $("#users").text(data.users);
-            $("#songs").text(data.songs);
-            $("#guilds").text(data.guilds);
-        });
-    });
-</script>
 </html>
