--- a/views/index.html
+++ b/views/index.html
@@ -177,12 +177,12 @@
               <div class="copyright-text">
                 <p>
                   © 2021
-                  <a href="//github.com/SudhanPlayz/Discord-MusicBot"
+                  <a href="//github.com/mrsmook/Discord-MusicBot"
                     >Discord Music Bot</a
                   >. All rights reserved. Made by
-                  <a href="//github.com/SudhanPlayz">Sudhan</a> and its
+                  <a href="//github.com/mrsmook">Sudhan</a> and its
                   <a
-                    href="//github.com/SudhanPlayz/Discord-MusicBot/graphs/contributors"
+                    href="//github.com/mrsmook/Discord-MusicBot/graphs/contributors"
                     >contributors</a
                   >
                 </p>
