feat : adedd mrsmook as owner of bot

--- a/views/server.html
+++ b/views/server.html
@@ -186,7 +186,7 @@
                       <a href="//github.com/mrsmook/Discord-MusicBot"
                         >Discord Music Bot</a
                       >. All rights reserved. Made by
-                      <a href="//github.com/mrsmook">Sudhan</a> and its
+                      <a href="//github.com/mrsmook">mrsmook</a> and its
                       <a
                         href="//github.com/mrsmook/Discord-MusicBot/graphs/contributors"
                         >contributors</a
